tests/baselines/reference/classWithOnlyPublicMembersEquivalentToInterface2.errors.txt
classWithOnlyPublicMembersEquivalentToInterface2.ts(5,35): error TS2322: Type 'null' is not assignable to type 'number'.
classWithOnlyPublicMembersEquivalentToInterface2.ts(26,5): error TS2454: Variable 'i' is used before being assigned.


==== classWithOnlyPublicMembersEquivalentToInterface2.ts (2 errors) ====
    // no errors expected
    
    class C {
        public x: string;
        public y(a: number): number { return null; }
                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        public get z() { return 1; }
        public set z(v) { }
        [x: string]: Object;
        [x: number]: Object;
        0: number;
    
        public static foo: string; // doesn't effect equivalence
    }
    
    interface I {
        x: string;
        y(b: number): number;
        z: number;
        [x: string]: Object;
        [x: number]: Object;
        0: number;
    }
    
    var c: C;
    var i: I;
    c = i;
        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i = c;